--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,14 @@
       </ul>
       <section class="top-bar-section">
         <ul class="right">
-          <li class="divider"></li>
-          <li><a href="#">Sign In</a></li>
+          <% if current_user %>
+            <li><a> Hi <%= current_user.name %>!</a></li>
+            <li class="divider"></li>
+            <li><%= link_to 'Sign Out', signout_path %></li>
+          <% else %>
+            <li class="divider"></li>
+            <li><%= link_to 'Sign In', signin_path %></li>
+          <% end %>
         </ul>
       </section>
     </nav>
