--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,17 @@
         </ul>
       </section>
     </nav>
+    <% if flash[:notice] %>
+      <div class="global alert-box">
+        <%= flash[:notice] %>
+        <a href="" class="close">&times;</a>
+    </div>
+   <% elsif flash[:error] %>
+      <div class="global alert-box alert">
+        <%= flash[:error] %>
+        <a href="" class="close">&times;</a>
+      </div>
+  <% end %>
   </div>
 
   <%= yield %>
